Don't let the user create note without a title

--- a/BSCTest/Resources/Texts/en.lproj/Localizable.strings
+++ b/BSCTest/Resources/Texts/en.lproj/Localizable.strings
@@ -10,6 +10,7 @@
 "save" = "Save";
 "change_color" = "Change color";
 "cancel" = "Cancel";
+"note_validation" = "Please, we need a title at least";
 
 // Notes list
 "notes_title" = "Notes";
